Fix animation on safari-ios

--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -141,6 +141,7 @@ ol {
 
 .skeleton {
 	animation: skeleton-loading 1s linear infinite alternate;
+	-webkit-animation: skeleton-loading 1s linear infinite alternate;
 }
 
 .skeleton-text {
