--- a/styles/sass/style.css
+++ b/styles/sass/style.css
@@ -139,6 +139,7 @@ ol {
 
 .skeleton {
   animation: skeleton-loading 1s linear infinite alternate;
+  -webkit-animation: skeleton-loading 1s linear infinite alternate;
 }
 
 .skeleton-text {
